<resources>
    <string name="app_name" translatable="false">NET Speed Test</string>
    <string name="app_lovin_sdk_key" translatable="false">lBnu4FPbTxGUi8cqgwNENfRfqINTVk8B9NxC2Japp2DqKPThsIhPCF7zcC6wr9_IN8OLTcG9SR4dT4OJwQPTBf</string>
    <string name="facebook_app_id" translatable="false">6250472201669610</string>
    <string name="facebook_client_token" translatable="false">20a405d511d863dc4e8e7997dd9e3b38</string>
    <string name="adjust_token_key" translatable="false">ijexu619l3wg</string>
    <string name="ads_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="download">DOWNLOAD</string>
    <string name="upload">UPLOAD</string>
    <string name="test">test</string>
    <string name="default_notify_title">Message</string>
    <string name="Loading">Loading</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="zero_value_dec" translatable="false">0.00</string>
    <string name="zero_value" translatable="false">0</string>
    <string name="val_100" translatable="false">100</string>
    <string name="val_10" translatable="false">10</string>
    <string name="val_50" translatable="false">50</string>
    <string name="val_500" translatable="false">500</string>
    <string name="val_1000" translatable="false">1000</string>
    <string name="val_5000" translatable="false">5000</string>
    <string name="val_10000" translatable="false">10000</string>
    <string name="val_15000" translatable="false">15000</string>
    <string name="key_speed_test" translatable="false">speed_test</string>
    <string name="key_data_usage" translatable="false">data_usage</string>
    <string name="speed">Speed</string>
    <string name="wifi_analyzer">Wifi Analyzer</string>
    <string name="result_bottom">Results</string>
    <string name="Mbps" translatable="false">Mbps</string>
    <string name="Byte" translatable="false">B</string>
    <string name="Mbs" translatable="false">MB/s</string>
    <string name="Mb" translatable="false">MB</string>
    <string name="Kbs" translatable="false">kB/s</string>
    <string name="Kb" translatable="false">KB</string>
    <string name="ms" translatable="false">ms</string>
    <string name="Gb" translatable="false">GB</string>
    <string name="unitPercent" translatable="false">%</string>
    <string name="dbm" translatable="false">dBm</string>
    <string name="rate_app">Rate app</string>
    <string name="share_app">Share app</string>
    <string name="feedback">Feedback</string>
    <string name="policy">Policy</string>
    <string name="speed_monitor">Speed Monitor</string>
    <string name="data_usage_menu">Data Usage</string>
    <string name="language">Languages</string>
    <string name="speed_test_title">SPEED TEST</string>
    <string name="wifi_analyzer_title">WIFI ANALYZER</string>
    <string name="vpn_title">VPN</string>
    <string name="results_title"> RESULTS</string>
    <string name="results">Check Results</string>
    <string name="result_detail">RESULT</string>
    <string name="connecting">CONNECTING</string>
    <string name="no_connection">No connection</string>
    <string name="mobile">Mobile</string>
    <string name="wifi">Wifi</string>
    <string name="no_connection_isp">No data</string>
    <string name="go">GO</string>
    <string name="graph_y">Signal Strength (dBm)</string>
    <string name="graph_x">\n Wi-Fi Channels</string>
    <string name="open_setting">OPEN SETTING</string>
    <string name="open_setting_permission">Open setting</string>
    <string name="no_permission">To use this feature, please accept location permission on your device</string>
    <string name="location_permission">Location permission</string>
    <string name="wifi_standard_legacy" translatable="false">"Wi-Fi 802.11a/b/g"</string>
    <string name="wifi_standard_n" translatable="false">"Wi-Fi 802.11n"</string>
    <string name="wifi_standard_ac" translatable="false">"Wi-Fi 802.11ac"</string>
    <string name="wifi_standard_ax" translatable="false">"Wi-Fi 802.11ax"</string>
    <string name="open_wifi_setting">OPEN WIFI SETTING</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="request_text">Check your internet connection</string>
    <string name="connected">Connected</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="delete_all_title">DELETE ALL RESULTS ?</string>
    <string name="delete_all_recent_title">DELETE ALL RECENT ?</string>
    <string name="delete_all_content">All results will be deleted</string>
    <string name="delete_all_recent">All recent will be deleted</string>
    <string name="signal_weak">Weak</string>
    <string name="signal_normal">Normal</string>
    <string name="signal_strong">Strong</string>
    <string name="isp" translatable="false">ISP</string>
    <string name="scan_again">Test Again</string>
    <string name="connection_name" translatable="false">SSID</string>
    <string name="internal_ip">Internal IP</string>
    <string name="external_ip">External IP</string>
    <string name="signal_status">Signal Status</string>
    <string name="neko">Neko</string>
    <string name="delete_content">This result will be deleted from your history</string>
    <string name="delete_title">DELETE RESULT</string>
    <string name="require_permission">Speedtest needs certain permissions to function correctly.</string>
    <string name="permission_text">Access to Location permission</string>
    <string name="des_permission">Agree for you to give the application to install the permissions granted to the application</string>
    <string name="ping" translatable="false">Ping</string>
    <string name="jitter" translatable="false">Jitter</string>
    <string name="loss" translatable="false">Loss</string>
    <string name="unit_preference" translatable="false">unit_preference</string>
    <string name="unit_value_preference" translatable="false">unit_value_preference</string>
    <string name="channel_id" translatable="false">CHANNEL_SPEED_TEST_ID</string>
    <string name="channel_name" translatable="false">channel_name</string>
    <string name="data_usage">DATA USAGE</string>
    <string name="service_type_key" translatable="false">service_type_key</string>
    <string name="usage_permission">The data access service will be used to get the data consumption of all the apps in your device. You can always modify the authorization in the \"Settings\"  of the app</string>
    <string name="permission_title">Allow access to use</string>
    <string name="deny">Deny</string>
    <string name="allow">Allow</string>
    <string name="data_usage_access">Data usage access</string>
    <string name="speed_test" translatable="false">SpeedTest</string>
    <string name="not_allowed">Not Allowed</string>
    <string name="thirty_day">30 Days</string>
    <string name="seven_day">7 Days</string>
    <string name="three_day">3 Days</string>
    <string name="today">Today</string>
    <string name="check_it_notification">Check it in notification bar</string>
    <string name="language_title">LANGUAGES</string>
    <string name="key_language" translatable="false">KEY_LANGUAGE</string>
    <string name="ENGLISH" translatable="false">English</string>
    <string name="JAPANESE" translatable="false">日本</string>
    <string name="KOREAN" translatable="false">"한국인 "</string>
    <string name="FRENCH" translatable="false">Français</string>
    <string name="ITALIA" translatable="false">Italia</string>
    <string name="GERMAN" translatable="false">Deutsch</string>
    <string name="VIETNAM" translatable="false">Tiếng Việt</string>
    <string name="no_list_found">No result found!</string>
    <string name="no_list_recet_found">No recent found!</string>
    <string name="text_permission_button">Grant Permission &amp; Continue</string>
    <string name="total">Total</string>
    <string name="ask_rate">"Are you satisfied with our app? "</string>
    <string name="text_rate_button_good">GOOD</string>
    <string name="text_rate_button_not_really">NOT REALLY</string>
    <string name="expressive_bad">We’re sorry you had a bad experience</string>
    <string name="expressive_normal">Please leave us some feedback</string>
    <string name="expressive_good">Thank you so much for the wonderful review</string>
    <string name="expressive_best">We like you too!</string>
    <string name="expressive_holder">Rate your provider</string>
    <string name="rate_us">RATE US</string>
    <string name="no_data_result">You don’t have any test result yet</string>
    <string name="start_testing">Go to Speed Test</string>
    <string name="mailTo" translatable="false">nekosoft.hiepdph@gmail.com</string>
    <string name="titlePopupMail">Send email using...</string>
    <string name="error_mail">No email clients installed.</string>
    <string name="no_connectivity">No connectivity!</string>
    <string name="signal_strength">Signal Strength</string>
    <string name="signal_strong_normal">Strong</string>
    <string name="explain_good">-60 to -40 dBm</string>
    <string name="explain_normal">-90 to -60 dBm</string>
    <string name="explain_bad"><![CDATA[< -90dBm]]></string>
    <string name="signal_normal_normal">Normal</string>
    <string name="signal_bad_normal">Bad</string>
    <string name="wifi_band_key" translatable="false">"wifi_band"</string>
    <string name="GHZ5">5 GHZ</string>
    <string name="GHZ2">2.4 GHZ</string>
    <string name="empty_list_wifi">No WiFi found!</string>
    <string name="tools">Tools</string>
    <string name="tools_title">TOOLS</string>
    <string name="wifi_detector">Wi-Fi Detector</string>
    <string name="ping_test">Ping Test</string>
    <string name="signal_test">Wi-Fi Signal Test</string>
    <string name="signal_test_menu">WI-FI SIGNAL TEST</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="des_signal_first">-Tap Start to test</string>
    <string name="des_signal_second">-Move around, tap Record to note down signal strength on your spot</string>
    <string name="wifi_detector_title">WIFI DETECTOR</string>
    <string name="device_detector">devices are using this Wi-Fi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ping_test_title">PING TEST</string>
    <string name="customized">Customized</string>
    <string name="latency_ping_test">Latency (ms)</string>
    <string name="advanced_ping">Advanced Ping</string>
    <string name="game">Game</string>
    <string name="video">Video</string>
    <string name="packet_sent">Packet Sent</string>
    <string name="packet_received">Packet Received</string>
    <string name="tips">Tips</string>
    <string name="desc_dbm">A unit of measure used to reference signal strength to electrical power level</string>
    <string name="perfect_signal">Perfect Signal</string>
    <string name="able_to_watch_video">Able to watch video</string>
    <string name="unstable_connection">Unstable connection</string>
    <string name="no_signal">No signal</string>
    <string name="light_browsing">Light browsing</string>
    <string name="desc_ping_test">Ping test is mainly used to check whether the connected network is smooth and stable</string>
    <string name="packet_loss_rate">Packet loss rate</string>
    <string name="desc_packet_loss_rate">Packet Loss Rate refers to the ratio of the number of packets lost in the test to the transmitted packets, which is used to reflect the network quality.</string>
    <string name="desc_packet_sent">Packet sent reports the number of times a task went into a send sleep state while waiting for the network to send each packet to the client.</string>
    <string name="packet_received_desc">A task received part of a multipacket batch and was switched out waiting for the client to send the next packet of the batch, or. A task completely finished ...</string>
</resources>