<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.85">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_800"
            android:paddingVertical="@dimen/_16sdp">


            <TextView
                android:id="@+id/tv_menu_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signal_strength"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_close"
                app:layout_constraintBottom_toBottomOf="@id/btn_close"/>

            <LinearLayout
                android:id="@+id/container_item_good"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingVertical="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_menu_title">

                <ImageView
                    android:id="@+id/imv_good_signal"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/ic_info_signal_good" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text="@string/signal_strong_normal"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explain_good"
                    android:textColor="@color/white"
                    android:minWidth="@dimen/_100sdp"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_item_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingVertical="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@id/container_item_good">

                <ImageView
                    android:id="@+id/imv_normal_signal"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/ic_info_signal_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text="@string/signal_normal_normal"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explain_normal"
                    android:minWidth="@dimen/_100sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_item_bad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingVertical="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@id/container_item_normal">

                <ImageView
                    android:id="@+id/imv_bad_signal"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/ic_info_signal_bad" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text="@string/signal_bad_normal"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explain_bad"
                    android:textColor="@color/white"
                    android:minWidth="@dimen/_100sdp"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>